Add articles for the top-section Add styling for the articles for the top-section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,3 +18,8 @@ nav {
 nav form {
   align-self: center;
 }
+.top-section {
+    background-color: brown;
+    display: flex;
+    flex-wrap: wrap;
+}
