--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,21 @@
 body {
   margin-top: 0;
   margin-left: 0;
-  margin-right: 0;
+  font-family: 'Spinnaker', sans-serif;
 }
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 60px;
+  color: white;
+  font-weight: 600;
 }
 
 .nav-element {
+  text-align: center;
   background-color: red;
-  width: 8.3%;
+  width: 7.5%;
+  padding-top: 10px;
 }
 
 nav form {
@@ -21,6 +25,8 @@ nav form {
     background-color: brown;
     display: flex;
     flex-wrap: wrap;
+    color: white;
+    font-weight: 500;
 }
 
 .top-section article {
@@ -169,4 +175,10 @@ footer h4 {
     position: relative;
     bottom: 50px;
     left: 50px;
+}
+
+.fourth-section :nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
