--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,17 +4,36 @@ body {
   font-family: 'Spinnaker', sans-serif;
 }
 
+nav {
+  background-color: var(--THEME_COLOR,#d33a2c);
+}
+
 nav ul {
   display: flex;
   justify-content: space-around;
   height: 60px;
   color: white;
   font-weight: 600;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+nav ul li:hover {
+  background: #b3d4fc;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+nav ul {
+  list-style: none;
+  padding-top: 20px;
 }
 
 .nav-element {
   text-align: center;
-  background-color: red;
   width: 7.5%;
   padding-top: 10px;
 }
@@ -34,9 +53,17 @@ nav form {
 .top-section article {
   display: flex;
   flex-direction: column;
-  flex-basis: 20rem;
+  flex-basis: 50rem;
   flex-grow: 1;
   align-items: center;
+}
+
+.top-section > :nth-child(1), .top-section > :nth-child(4) {
+  background-color: #bc3428;
+}
+
+.top-section > :nth-child(2) , .top-section > :nth-child(3) {
+  background-color: #c7372a;;
 }
 
 .second-section {
@@ -44,13 +71,9 @@ nav form {
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   align-items: center;
   justify-items: center;
-  padding-left: 20%;
+  padding-left: 5%;
   padding-right: 20%;
   grid-gap: 15px;
-}
-
-.second-section article {
-  background-color: salmon;
 }
 
 .arrow {
@@ -64,18 +87,26 @@ nav form {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   justify-items: center;
-  padding-left: 20%;
+  padding-left: 5%;
   padding-right: 20%;
   grid-gap: 15px;
+}
+
+.third-section > :nth-child(1) {
+  background-color: #d33a2c;
 }
 
 .fourth-section {
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
   justify-items: center;
-  padding-left: 20%;
+  padding-left: 5%;
   padding-right: 20%;
   grid-gap: 15px;
+}
+
+.fourth-section > :nth-child(3) {
+  background-color: #d33a2c;
 }
 
 .fifth-section {
@@ -84,7 +115,7 @@ nav form {
 
 .sixth-section {
   text-align: center;
-  background-color: blue;
+  background-image: linear-gradient(#1b71bb 45%,#4399d9 100%);
   padding-left: 30%;
   padding-right: 30%;
 }
@@ -145,25 +176,31 @@ nav form {
 #book {
   width: 150px;
   height: 150px;
-  background-color: red;
+  background-color:lightblue;
 }
 
 .tenth-section article {
   display: flex;
-  justify-content: space-around;
-  background-color: rgb(105, 52, 31);
+  justify-content: space-between;
+  background-color: #d33a2c;
+  padding-left: 2%;
 }
 
 .eleventh-section {
   display: grid;
-  background-color: lightblue;
   grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
   padding-left: 30%;
   padding-right: 30%;
 }
 
 .eleventh-section article:nth-child(4) {
-  grid-column-start: 2;
+  grid-column: 1/-1;
+  justify-self: center;
+  background-image: linear-gradient(#1b71bb 60%,#01a6c1 100%);
+  margin: 1.5em 0;
+  padding: 1em 0;
+  box-shadow: none;
+  max-width: 450px;
 }
 
 @media (max-width: 600px) {
@@ -173,11 +210,13 @@ nav form {
 }
 
 footer {
-  background-color: red;
+  background-color: var(--THEME_SECONDARY_COLOR,#d33a2c);
   text-align: center;
   height: 100%;
   margin-top: 0;
   margin-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 footer h4 {
